2014-07-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add Amcheck module.

2014-07-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Message.pm: Add amcheck message.
	* perl/Amanda/Rest/Amcheck.pm: Rest API endpoint to execute amcheck.
	* perl/Makefile.am (AmandaRest_DATA): Add Amanda/Rest/Amcheck.pm.
	* server-src/diskfile.c (match_disklist): return a GPtrArray.
	* server-src/diskfile.h (match_disklist): Change prototype.
	* server-src/driver.c, server-src/dumper.c: Fix argv0.
	* server-src/amadmin.c, server-src/planner.c: Use newest
	  match_disklist function.
	* server-src/amcheck.c, server-src/amcheck-device.pl: new --message
	  argument to format the output in json.
	* installcheck/Amanda_Rest_Amcheck.pl: Check the Amcheckrest api.
	* installcheck/Makefile.am: Add Amanda_Rest_Amcheck.

2014-07-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (handle_dumper_result): Call dumper_taper_result
	  if we already get the taper result.

2014-07-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c (update_info_dumper): Do not update if size or
	  csize is 0.
	* server-src/server_util.c: Do not uses history if size is 0.

2014-06-26  Strong Liang <strong@zmanda.com>
	* server-src/driver.c: Updated copyright-info.
	* ChangeLog: trimed trailing spaces.

2014-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Use ${MKDIR_P}
	* device-src/Makefile.am, ndmp-src/Makefile.am, xfer-src/Makefile.am:
	  Use ${SED}

2014-06-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Remove useless space.

2014-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/Makefile.am, patching file ndmp-src/Makefile.am,
	  xfer-src/Makefile.am: Fix install-build-dependencies.

2014-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Use bloking connect.

2014-06-17  Jean-Louis Martineau <martineau@zmanda.com>